--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.9.0",
     "antd": "^5.20.6",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.18.0",
     "init": "^0.1.2",
     "jodit-react": "^4.1.2",
+    "lucide-react": "^0.574.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
